# hashsource_antminer_x19

./: .mcp.json  CLAUDE.md  Makefile  README.md  make.yml
br2_external_bitmain/: Config.in  external.desc  external.mk
br2_external_bitmain/board/x19_xilinx/: busybox.config  flash_erase  nanddump  nandwrite  post-build.sh  post-image-ramdisk.sh  ramdisk-fit.its  ramdisk.its
br2_external_bitmain/board/x19_xilinx/patches/dropbear/: 0001-disable-getrandom-to-avoid-boot-blocking.patch
br2_external_bitmain/board/x19_xilinx/rootfs-overlay/etc/: bash.bashrc  inittab  motd
br2_external_bitmain/board/x19_xilinx/rootfs-overlay/etc/default/: dropbear
br2_external_bitmain/board/x19_xilinx/rootfs-overlay/root/: .bashrc  .profile
br2_external_bitmain/board/x19_xilinx/rootfs-overlay/sbin/: id2mac
br2_external_bitmain/configs/: x19_xilinx_ramdisk_defconfig
docs/: BM1398_PROTOCOL.md  EXECUTION_PLAN.md  PATTERN_TEST.md  PLAN.md  PSU_PROTOCOL.md  REFERENCES.md  TEST_MACHINES.md
hashsource_x19/: .gitignore  Makefile  README.md
hashsource_x19/drivers/: gpio_pwm.c  s19_driver.c
hashsource_x19/include/: bm1398_asic.h  miner.h
hashsource_x19/src/: asic_scan.c  asic_status_check.c  bm1398_asic.c  chain_test.c  eeprom_detect.c  fan_test.c  fpga_dump.c  fpga_logger.c  fpga_multi_reg_test.c  fpga_reg_test.c  id2mac.c  main.c  pattern_test.c  psu_test.c  utils.c  work_test.c
hashsource_x19_rs/: .gitignore  Cargo.toml
hashsource_x19_rs/src/: fpga.rs  lib.rs
scripts/: bitmain_ramdisk_install.sh  dump_tty.sh  hashsource_ramdisk_update.sh
(+7 files in other folders)
