[package]
name = "hashsource-x19"
version = "0.0.1"
edition = "2024"
authors = ["HashSource"]

[lib]
name = "hashsource_x19"
path = "src/lib.rs"

# Binary: fan_control
[[bin]]
name = "fan_control"
path = "bin/fan_control.rs"

[dependencies]
# Minimal dependencies for embedded systems
libc = { version = "0.2", default-features = false }
anyhow = { version = "1.0", default-features = false }

# Note: Buildroot controls optimization via environment variables
# Do not add [profile.*] sections - they will be ignored
